<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RFCActivity">

    <EditText
        android:id="@+id/txtaño"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/p1nombre"
        android:ems="10"
        android:hint="@string/p3rfc6"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.556" />

    <EditText
        android:id="@+id/txtmes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/p1nombre"
        android:ems="10"
        android:hint="@string/p3rfc4"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.465" />

    <EditText
        android:id="@+id/txtnacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/p1nombre"
        android:ems="10"
        android:hint="@string/p3rfc5"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.37" />

    <EditText
        android:id="@+id/txtmaterno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/p1nombre"
        android:ems="10"
        android:hint="@string/p3rfc3"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.269" />

    <EditText
        android:id="@+id/txtpaterno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/p1nombre"
        android:ems="10"
        android:hint="@string/p3rfc2"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="136dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/p3rfc"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/p1nombre"
        android:ems="10"
        android:hint="@string/p3rfc1"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/btngenerar"
        android:layout_width="136dp"
        android:layout_height="61dp"
        android:text="@string/p3btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtaño"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="137dp"
        android:layout_height="59dp"
        android:text="@string/p3resultado"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btngenerar"
        app:layout_constraintVertical_bias="0.41" />
</androidx.constraintlayout.widget.ConstraintLayout>